--- a/Week5/package.json
+++ b/Week5/package.json
@@ -7,6 +7,9 @@
   "dependencies": {
     "ejs": "^3.1.9",
     "express": "^4.18.3",
-    "nodemon": "^3.1.0"
+    "knex": "^3.1.0",
+    "nodemon": "^3.1.0",
+    "sqlite3": "^5.1.7",
+    "type": "module"
   }
 }
