--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "Week4.mjs",
   "type": "module",
   "scripts": {
-    "dev": "nodemon Week4/Week4.js",
+    "dev": "nodemon Week5/Week5.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -13,7 +13,9 @@
   "dependencies": {
     "chalk": "^5.3.0",
     "ejs": "^3.1.9",
-    "express": "^4.18.3"
+    "express": "^4.18.3",
+    "knex": "^3.1.0",
+    "sqlite3": "^5.1.7"
   },
   "devDependencies": {
     "nodemon": "^3.1.0"
