--- a/Main/package.json
+++ b/Main/package.json
@@ -2,7 +2,8 @@
   "name": "todos",
   "type": "module",
   "scripts": {
-    "dev": "nodemon main.js"
+    "dev": "nodemon main.js",
+    "test" : "ava"
   },
   "dependencies": {
     "ejs": "^3.1.9",
